; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/b2c2/extr_flexcop-pci.c_flexcop_pci_dma_exit.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/b2c2/extr_flexcop-pci.c_flexcop_pci_dma_exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.flexcop_pci = type { i32, i32* }

@FC_PCI_DMA_INIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.flexcop_pci*)* @flexcop_pci_dma_exit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @flexcop_pci_dma_exit(%struct.flexcop_pci* %0) #0 {
  %2 = alloca %struct.flexcop_pci*, align 8
  store %struct.flexcop_pci* %0, %struct.flexcop_pci** %2, align 8
  %3 = load %struct.flexcop_pci*, %struct.flexcop_pci** %2, align 8
  %4 = getelementptr inbounds %struct.flexcop_pci, %struct.flexcop_pci* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 8
  %6 = load i32, i32* @FC_PCI_DMA_INIT, align 4
  %7 = and i32 %5, %6
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %20

9:                                                ; preds = %1
  %10 = load %struct.flexcop_pci*, %struct.flexcop_pci** %2, align 8
  %11 = getelementptr inbounds %struct.flexcop_pci, %struct.flexcop_pci* %10, i32 0, i32 1
  %12 = load i32*, i32** %11, align 8
  %13 = getelementptr inbounds i32, i32* %12, i64 0
  %14 = call i32 @flexcop_dma_free(i32* %13)
  %15 = load %struct.flexcop_pci*, %struct.flexcop_pci** %2, align 8
  %16 = getelementptr inbounds %struct.flexcop_pci, %struct.flexcop_pci* %15, i32 0, i32 1
  %17 = load i32*, i32** %16, align 8
  %18 = getelementptr inbounds i32, i32* %17, i64 1
  %19 = call i32 @flexcop_dma_free(i32* %18)
  br label %20

20:                                               ; preds = %9, %1
  %21 = load i32, i32* @FC_PCI_DMA_INIT, align 4
  %22 = xor i32 %21, -1
  %23 = load %struct.flexcop_pci*, %struct.flexcop_pci** %2, align 8
  %24 = getelementptr inbounds %struct.flexcop_pci, %struct.flexcop_pci* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = and i32 %25, %22
  store i32 %26, i32* %24, align 8
  ret void
}

declare dso_local i32 @flexcop_dma_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
